Update .gitignore and .vscode/launch.json, add movie and user collections, implement CRUD operations, handle user authentication

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -25,11 +25,9 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Program",
+            "envFile": "${workspaceFolder}/.env",
             "skipFiles": [
                 "<node_internals>/**"
-            ],
-            "runtimeArgs": [
-                "--require=dotenv/config"
             ],
             "program": "${workspaceFolder}/server.js"
         }
